--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/img/iou.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/img/iouLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IOU | IOU.com</title>
   </head>
